2 verze už i hra jednoho hráče proti PC
přidaný singleplayer

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <script src="Bullet.js"></script>
     <script src="Ship.js"></script>
     <script src="Input.js"></script>
+    <script src="AI.js"></script>
     <script src="Game.js"></script>
     <script src="main.js"></script>
 </body>
