přidané asteroidy, palivo, hyperskok

--- a/index.html
+++ b/index.html
@@ -66,12 +66,14 @@
 
     <!-- Load all game modules -->
     <script src="Vector2.js"></script>
+    <script src="Input.js"></script>
+    <script src="SoundManager.js"></script>
     <script src="Sun.js"></script>
     <script src="Bullet.js"></script>
     <script src="Ship.js"></script>
-    <script src="Input.js"></script>
+    <script src="Asteroid.js"></script>
+    <script src="FuelCanister.js"></script>
     <script src="AI.js"></script>
-    <script src="SoundManager.js"></script>
     <script src="Game.js"></script>
     <script src="main.js"></script>
 </body>
